// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomLoader should be rendered correctly with isShow = false 1`] = `<div />`;

exports[`CustomLoader should be rendered correctly with isShow = true 1`] = `
<div
  className="f1v92har"
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
/>
`;

exports[`CustomLoader should be rendered correctly with label 1`] = `
<div
  className="f105mevs"
>
  <div
    className="f1v92har"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <span
    className="f17mxm1j"
  >
    loading...
  </span>
</div>
`;
